src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

@font-face {
  font-family: "Inter";
  src: url("/fonts/Inter-VariableFont_slnt,wght.ttf");
}

@font-face {
  font-family: "Montserrat";
  src: url("/fonts/Montserrat-VariableFont_wght.ttf");
}

:root {
  --ifm-font-heading-family: "Montserrat";
  --ifm-font-content-family: "Inter";
  transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
  --ifm-color-primary: #008478;
  --ifm-color-primary-dark: #007466;
  --ifm-color-primary-darker: #00695c;
  --ifm-color-primary-darkest: #004d40;
  --ifm-color-primary-light: #26a69a;
  --ifm-color-primary-lighter: #80cbc4;
  --ifm-color-primary-lightest: #b2dfdb;
  --ifm-color-secondary: #ebedf0;
  --ifm-color-success: #388e3c;
  --ifm-color-info: #1976d2;
  --ifm-color-warning: #ef6c00;
  --ifm-color-danger: #d84315;
  --ifm-code-font-size: 95%;
  --ifm-footer-link-hover-color: #4db6ac; /* Same as dark theme primary */
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --gradient: linear-gradient(
    60deg,
    var(--ifm-color-primary-darker) 0%,
    var(--ifm-color-primary-light) 100%
  );
  --theme-card: #f6f6f6;
  --dark-theme-bg-color: #1b1b1d;
  --light-theme-bg-color: #fff;
  --pydata-link-underline-thickness: max(1px, 0.0625rem);
  --pydata-link-underline-offset: 0.1578em;
  --pydata-link-hover-decoration-thickness: max(3px, 0.1875rem, 0.12em);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #4db6ac;
  --ifm-color-primary-dark: #009688;
  --ifm-color-primary-darker: #00897b;
  --ifm-color-primary-darkest: #00796b;
  --ifm-color-primary-light: #80cbc4;
  --ifm-color-primary-lighter: #b2dfdb;
  --ifm-color-primary-lightest: #e0f2f1;
  --ifm-color-secondary: #ebedf0;
  --ifm-color-success: #81c784;
  --ifm-color-info: #64b5f6;
  --ifm-color-warning: #ffb74d;
  --ifm-color-danger: #ff8a65;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
  --gradient: linear-gradient(
    60deg,
    var(--ifm-color-primary-darker) 0%,
    var(--ifm-color-primary) 100%
  );
  --theme-card: #3a3a3a;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--ifm-font-heading-family);
}

p {
  font-family: var(--ifm-font-content-family);
}

a {
  text-decoration: underline;
  text-decoration-thickness: var(--pydata-link-underline-thickness);
  text-underline-offset: var(--pydata-link-underline-offset);
}

a:hover,
a.navbar__link:hover,
a.table-of-contents__link:hover,
a[class^="sidebarItemLink"]:hover {
  text-decoration: underline;
  text-decoration-thickness: var(--pydata-link-hover-decoration-thickness);
  text-decoration-skip-ink: none;
  text-decoration-skip: none;
}

a:active,
a.navbar__link:active,
a.table-of-contents__link:active,
a[class^="sidebarItemLink"]:active {
  text-decoration-thickness: var(--pydata-link-decoration-thickness);
}

a[class^="sidebarItemLink"][aria-current="page"],
a.navbar__link,
.navbar-sidebar__item,
.menu a,
.navbar__items--right a,
.pagination-nav__link,
a.card,
a.card:hover {
  text-decoration: none;
}

.pagination-nav__link:active,
a.card:active,
.menu a:active {
  background-color: var(--ifm-color-primary-lightest);
  color: #000;
}
[data-theme="dark"] .pagination-nav__link:active,
a.card:active,
.menu a:active {
  background-color: var(--ifm-color-primary-darkest);
  color: #fff;
}

.navbar__logo img:hover {
  transform: scale(1.05);
}
.navbar__logo img:active {
  transform: scale(1);
}

.gradient_text {
  background: var(--gradient);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.homepage_button {
  background:
    linear-gradient(#fff, #fff) padding-box,
    var(--gradient) border-box;
  border: 2px solid transparent;
}

.homepage_button:hover {
  background:
    linear-gradient(#ebedf0, #ebedf0) padding-box,
    var(--gradient) border-box;
}

[data-theme="dark"]
  .button.button--secondary:not([aria-label="Collapse sidebar"]) {
  background:
    linear-gradient(#3a3a3a, #3a3a3a) padding-box,
    var(--gradient) border-box;
  border: 2px solid transparent;
  color: #ffffff;
}

[data-theme="dark"]
  .button.button--secondary:hover:not([aria-label="Collapse sidebar"]) {
  background:
    linear-gradient(#4c4c4c, #4c4c4c) padding-box,
    var(--gradient) border-box;
  border: 2px solid transparent;
  color: #ffffff;
}

.color-container {
  display: inline-flex;
  flex-direction: column;
}

.color {
  height: 4rem;
  margin: 0.5rem;
  width: 4rem;
  border-radius: 100%;
  text-align: center;
}

.color-gradient {
  height: 4rem;
  margin: 0.5rem;
  width: 4rem;
  border-radius: 100%;
  text-align: center;
  background: var(--gradient);
}

.color-text {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 4px;
  font-size: 1rem;
  font-weight: 500;
}

.color-palette-theme-container {
  padding: 1rem;
  border-radius: 15px;
}

.color-palette-light-theme-container {
  background: var(--light-theme-bg-color);
  color: var(--dark-theme-bg-color);
  padding: 1rem;
  border-radius: 5px;
}

.color-palette-dark-theme-container {
  background: var(--dark-theme-bg-color);
  color: var(--light-theme-bg-color);
  padding: 1rem;
  border-radius: 5px;
}

.logo-container-dark {
  background: var(--dark-theme-bg-color);
  padding: 1rem;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.logo-container-light {
  background: var(--light-theme-bg-color);
  padding: 1rem;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
}

